--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="foto-descricao">
             <img src="assets/perfil.jpg" alt="Foto de perfil" class="foto" >
             <p>
-           Soy una aprendiz comprometida con crecer un poquito cada día. Actualmente estudio Diseño Gráfico en la Universidad Uninter y me dedico a explorar herramientas como Canva, Adobe Illustrator y Figma para crear soluciones visuales bonitas, funcionales y con propósito.
+           Soy una aprendiz brasileña comprometida con crecer un poquito cada día. Actualmente estudio Diseño Gráfico en la Universidad Uninter y me dedico a explorar herramientas como Canva, Adobe Illustrator y Figma para crear soluciones visuales bonitas, funcionales y con propósito.
 Mi trayectoria también incluye conocimientos básicos de HTML, CSS y JavaScript, adquiridos durante mis estudios de programación Front-end, que aplico en proyectos personales para desarrollar experiencias visuales e interactivas.
 Además del diseño, estudio idiomas por mi cuenta —inglés, francés y español— porque creo que comprender otras culturas amplía nuestra creatividad.
 Sigo construyendo mi camino con paciencia, curiosidad y ganas de marcar la diferencia.
